--- a/Climatechange_research.ipynb
+++ b/Climatechange_research.ipynb
@@ -116,8 +116,8 @@
     "# plt.plot for 12 different average temperatures per year (January - December)\n",
     "A, ax = plt.subplots(figsize = (12,8))\n",
     "plt.plot(years, temp)\n",
-    "ax.set_xlabel(\"Temperature (Average)\")\n",
-    "ax.set_ylabel(\"Year\")\n",
+    "ax.set_xlabel(\"Year\")\n",
+    "ax.set_ylabel(\"Temperature (Average)\")\n",
     "plt.show()"
    ]
   },
